add naive scheduler (from adamlouis/squirrelbyte) and update gsg
